fixed db functionality, added strategy pattern, report generating and saving